<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="y0U-0C-7pI">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="h18-5a-xVd">
            <objects>
                <navigationController id="y0U-0C-7pI" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KbJ-Qd-Qwv">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="jF3-cM-k1a" kind="relationship" relationship="rootViewController" id="x9r-Gx-xUf"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="8Zv-by-tXJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-748" y="120"/>
        </scene>
        <!--LJSlideTabView-->
        <scene sceneID="2Wo-tK-392">
            <objects>
                <viewController id="jF3-cM-k1a" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="9J2-Ol-lmm">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P7o-Gg-hq0">
                                <rect key="frame" x="139" y="216" width="97" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="1.普通的Demo"/>
                                <connections>
                                    <segue destination="hHP-av-sIc" kind="show" id="qxO-2g-xsz"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vlr-1k-o4Z">
                                <rect key="frame" x="106" y="318" width="162" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="2.Tab 数量很多的 Demo"/>
                                <connections>
                                    <segue destination="cu6-kS-YYI" kind="show" id="77H-q7-0Gb"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1sR-Cf-ta1">
                                <rect key="frame" x="164" y="434" width="46" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <viewLayoutGuide key="safeArea" id="NPI-XL-Aaa"/>
                    </view>
                    <navigationItem key="navigationItem" title="LJSlideTabView" id="ols-qb-cQX">
                        <barButtonItem key="backBarButtonItem" title="Back" id="OzN-jH-i9x"/>
                    </navigationItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VRJ-ML-L0K" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="54" y="119"/>
        </scene>
        <!--First Demo-->
        <scene sceneID="otG-LB-IkA">
            <objects>
                <viewController title="First Demo" id="hHP-av-sIc" customClass="FirstDemoViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="fSH-T6-LP7">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <viewLayoutGuide key="safeArea" id="JjH-7z-ZdP"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="RQT-5u-GU8" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="988" y="-534"/>
        </scene>
        <!--Second Demo-->
        <scene sceneID="qXx-WA-gic">
            <objects>
                <viewController title="Second Demo" id="cu6-kS-YYI" customClass="SecondDemoViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="OYP-YK-jWL">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <viewLayoutGuide key="safeArea" id="EFw-9g-ZDE"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9PR-w8-dwS" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="989" y="346"/>
        </scene>
    </scenes>
</document>
